--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
 
             <p>Webseiten bestehen am Bildschirm aus <strong>rechteckigen Kästchen</strong>. Alles Runde ist entweder Trick, Grafik oder beides.</p>
 
-            <p>Beim Umgang mit diesen Köstchen haben <em>HTML</em> und <em>css</em> klar getrennte Aufgaben:</p>
+            <p>Beim Umgang mit diesen Kästchen haben <em>HTML</em> und <em>css</em> klar getrennte Aufgaben:</p>
+
+            <ul>
+                <li>HTML-Elemente strukturieren die Webseite und erstellen die Kästchen</li>
+                <li>CSS-Regeln gestalten die Kästchen und deren Inhalte</li>
+            </ul>
+
+            <p>Beide Sprachen arbeiten bei der Erstellung und Gestaltung von Webseite eng zusammen.</p>
 
         </main>
 
