Link zur Webseite eingefügt

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li>CSS-Regeln gestalten die Kästchen und deren Inhalte</li>
             </ul>
 
-            <p>Beide Sprachen arbeiten bei der Erstellung und Gestaltung von Webseite eng zusammen.</p>
+            <p>Beide Sprachen arbeiten bei der Erstellung und Gestaltung von Webseite eng zusammen. Besuchen Sie <a href="https://html-und-css.de/de/">die Webseite zum Buch</a></p>
 
         </main>
 
