--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 
         <!-- Navigationsbereich -->
         <nav>
-
-
+            <ul>
+                <li><a href="index.html">Startseite</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Über uns</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
 
         </nav>
 
@@ -40,7 +44,7 @@
                 <li>CSS-Regeln gestalten die Kästchen und deren Inhalte</li>
             </ul>
 
-            <p>Beide Sprachen arbeiten bei der Erstellung und Gestaltung von Webseite eng zusammen. Besuchen Sie <a href="https://html-und-css.de/de/" target="_blank" rel="noreferrer noopener">die Webseite zum Buch für weitere Informationen.</a></p>
+            <p>Beide Sprachen arbeiten bei der Erstellung und Gestaltung von Webseiten eng zusammen. Besuchen Sie <a href="https://html-und-css.de/de/" target="_blank" rel="noreferrer noopener">die Webseite zum Buch</a> (Link öffnet in neuem Tab) für weitere Informationen.</p>
 
         </main>
 
