Link "Nach oben" einfügen
geht zu "Top"

--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
 
         <!-- Fussbereich -->
         <footer>
-
-
-
-        
+            <a href="#top">Nach oben</a>
         </footer>
 
     </body>
