Titel durch Bild ersetzen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <body>
         <!-- Kopfbereich der Webseite -->
         <header>
-            <h1>HTML + CSS</h1>                
+            <h1>
+                <img src="bilder/html-und-css-logo-222.png" alt="HTML und CSS" width="222" height="36">
+            </h1>                
             <p>Webseiten erstellen und gestalten</p>
         </header>
         
