Erster Commit der Bilder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <!-- Kopfbereich der Webseite -->
         <header>
             <h1>
-                <img src="bilder/html-und-css-logo-222.png" alt="HTML und CSS" width="222" height="36">
+                <img src="bilder/html-und-css-logo-222.png"
+                srcset="bilder/html-und-css-logo-444.png 2x" 
+                alt="HTML und CSS" 
+                width="222" 
+                height="36">
             </h1>                
             <p>Webseiten erstellen und gestalten</p>
         </header>
