Add class to header
with class=""

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <!-- Kopfbereich der Webseite -->
-        <header>
+        <header class="site-header">
             <h1>
                 <img src="bilder/html-und-css-logo-222.png"
                 srcset="bilder/html-und-css-logo-444.png 2x" 
