Add class to nav with class=""
used "site-nav"

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
 
         <!-- Navigationsbereich -->
-        <nav>
+        <nav class="site-nav">
             <ul>
                 <li><a href="index.html">Startseite</a></li>
                 <li><a href="#">News</a></li>
