Add class and id to "main"
used "site-content" as class and "content" as id

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- Navigationsbereich -->
         <nav class="site-nav">
-            <ul>
+            <ul>    
                 <li><a href="index.html">Startseite</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Über uns</a></li>
@@ -38,7 +38,7 @@
         </nav>
 
         <!-- Inhaltsbereich -->
-        <main>
+        <main class="site-content" id="content">
             <h2>Wilkommen</h2>
 
             <p>Webseiten bestehen am Bildschirm aus <strong>rechteckigen Kästchen</strong>. Alles Runde ist entweder Trick, Grafik oder beides.</p>
