Add class to "footer"
used "site-footer"

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </main>
 
         <!-- Fussbereich -->
-        <footer>
+        <footer class="site-footer">
             <a href="#top">Nach oben</a>
         </footer>
 
