Add section to "main" and give class to them
used two section with classes "content-intro" and "infoboxen"

--- a/index.html
+++ b/index.html
@@ -39,19 +39,27 @@
 
         <!-- Inhaltsbereich -->
         <main class="site-content" id="content">
-            <h2>Wilkommen</h2>
+            <section class="content-intro">
 
-            <p>Webseiten bestehen am Bildschirm aus <strong>rechteckigen Kästchen</strong>. Alles Runde ist entweder Trick, Grafik oder beides.</p>
+                <h2>Wilkommen</h2>
 
-            <p>Beim Umgang mit diesen Kästchen haben <em>HTML</em> und <em>CSS</em> klar getrennte Aufgaben:</p>
+                <p>Webseiten bestehen am Bildschirm aus <strong>rechteckigen Kästchen</strong>. Alles Runde ist entweder Trick, Grafik oder beides.</p>
 
-            <ul>
-                <li>HTML-Elemente strukturieren die Webseite und erstellen die Kästchen</li>
-                <li>CSS-Regeln gestalten die Kästchen und deren Inhalte</li>
-            </ul>
+                <p>Beim Umgang mit diesen Kästchen haben <em>HTML</em> und <em>CSS</em> klar getrennte Aufgaben:</p>
+
+                <ul>
+                    <li>HTML-Elemente strukturieren die Webseite und erstellen die Kästchen</li>
+                    <li>CSS-Regeln gestalten die Kästchen und deren Inhalte</li>
+                </ul>
 
             <p>Beide Sprachen arbeiten bei der Erstellung und Gestaltung von Webseiten eng zusammen. Besuchen Sie <a href="https://html-und-css.de/de/" target="_blank" rel="noreferrer noopener">die Webseite zum Buch</a> (Link öffnet in neuem Tab) für weitere Informationen.</p>
+            </section>
 
+            <section class="infoboxen">
+
+                <h2>Die Bereiche der Website</h2>
+
+            </section>
         </main>
 
         <!-- Fussbereich -->
