Add 3 articles in section "infobox" with
added 3 articles in section "infobox" with class "infobox". used empty links

--- a/index.html
+++ b/index.html
@@ -58,8 +58,26 @@
             <section class="infoboxen">
 
                 <h2>Die Bereiche der Website</h2>
+                
+                <article class="infobox">
+                    <h3>News</h3>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <p><a href="#">Ab zum Blog</a></p>
+                </article>
 
+                <article class="infobox">
+                    <h3>Über uns</h3>
+                    <p>Aenean massa. Cum sociis ...</p>
+                    <p><a href="#">Wer wir sind</a></p>
+                </article>
+
+                <article class="infobox">
+                    <h3>Kontakt</h3>
+                    <p>Donec quam felis, ultricies</p>
+                    <p><a href="#">Hallo sagen</a></p>
+                </article>
             </section>
+            
         </main>
 
         <!-- Fussbereich -->
