Complete text in the 3 "infobox" articles

--- a/index.html
+++ b/index.html
@@ -61,23 +61,23 @@
                 
                 <article class="infobox">
                     <h3>News</h3>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
                     <p><a href="#">Ab zum Blog</a></p>
                 </article>
 
                 <article class="infobox">
                     <h3>Über uns</h3>
-                    <p>Aenean massa. Cum sociis ...</p>
+                    <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                     <p><a href="#">Wer wir sind</a></p>
                 </article>
 
                 <article class="infobox">
                     <h3>Kontakt</h3>
-                    <p>Donec quam felis, ultricies</p>
+                    <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massi quis enim.</p>
                     <p><a href="#">Hallo sagen</a></p>
                 </article>
             </section>
-            
+
         </main>
 
         <!-- Fussbereich -->
